# real

./: 78.py  active_learning.py  analytics_plus.py  attribution.py  clip_recorder.py  dashboard.py  db.py  digital_twin.py  event_engine.py  features_config.py  forecast_plus.py  integrations.py  multistore.py  multiview_fusion.py  pyproject.toml  report.py  store_config.py  stores_registry.json  vision_advanced.py  vlm_bridge.py  zone_config.json  zone_editor.py
analytics_logs/: Cam_104_Specialty_20260618.csv  Cam_231_Counter_20260618.csv  chain_summary.json  live_state.json  store.db  twin_state.json
analytics_logs/active_learning/: index.json
analytics_logs/clips/: index.json
analytics_logs/vlm/: latest_insight.json
openvino_models/yolo11s-pose_openvino_model/: metadata.yaml  yolo11s-pose.xml
openvino_models/yolo11s-seg_openvino_model/: metadata.yaml  yolo11s-seg.xml
retail/: __init__.py  __main__.py  cli.py  geometry.py  paths.py
retail/analytics/: __init__.py  attribution.py  brain.py  cam.py  events.py  forecast.py
retail/apps/: __init__.py  dashboard.py  zone_editor.py
retail/config/: __init__.py  bytetrack.yaml  cameras.example.py  cameras.py  models.py  settings.py
retail/data/: __init__.py  db.py  export.py  report.py  serialize.py
retail/pipeline/: __init__.py  infer_ipc.py  infer_pool.py  infer_worker.py  runner.py
retail/services/: active_learning.py  clips.py  digital_twin.py  frame_hub.py  multistore.py  multiview.py  vlm.py  webhook.py
retail/ui/: overlay.py  text.py
retail/vision/: advanced.py  capture_process.py  contours.py  (+7 more)
