[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-analytics"
version = "2.0.0"
description = "零售店铺视觉智能分析（YOLO + BI 仪表盘）"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26,<2",
    "opencv-python>=4.8,<4.10",
    "pillow",
    "torch",
    "ultralytics",
]

[project.optional-dependencies]
ocr = ["easyocr"]
forecast = ["scikit-learn"]
openvino = ["openvino>=2024.0.0"]
all = ["easyocr", "scikit-learn", "openvino>=2024.0.0"]

[project.scripts]
retail = "retail.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["retail*"]
